--- a/slides.html
+++ b/slides.html
@@ -506,6 +506,11 @@ Enum.chunk(50..100, 10)
 ```elixir
 1..1_000_000 |> Stream.filter(fn(x) -> rem(x,10) ==0 end) |> Enum.count
 ```
+
+---
+# Thanks
+
+Slides at https://eoinsha.github.io/elixir-intro-slides/slides.html
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
     </script>
