Update for Phoenix 0.13.1

--- a/slides.html
+++ b/slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Elixir - Digisoft Tech Talk</title>
+    <title>Elixir and Phoenix</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -21,7 +21,7 @@
 
 class: center, middle
 
-# Elixir 
+# Elixir + Phoenix
 
 ---
 
@@ -757,7 +757,7 @@ end
 
 ```bash
 mix archive.install \
- https://github.com/phoenixframework/phoenix/releases/download/v0.12.0/phoenix_new-0.12.0.ez
+ https://github.com/../phoenix_new-0.13.1.ez
 ```
 
 ```bash
