--- a/slides.html
+++ b/slides.html
@@ -21,7 +21,11 @@
 
 class: center, middle
 
-# Elixir 
+# Elixir + Phoenix
+
+---
+
+# Microservices!
 
 ---
 
@@ -37,6 +41,7 @@ class: center, middle
 ## - Concurrent
 ## - Distributed
 ## - Fault tolerant 
+## - Lovely
 
 ---
 
@@ -755,6 +760,11 @@ end
 
 # Start with Phoenix
 
+- http://www.phoenixframework.org
+- @elixirphoenix
+
+---
+
 ```bash
 mix archive.install \
  https://github.com/phoenixframework/phoenix/releases/download/v0.12.0/phoenix_new-0.12.0.ez
@@ -807,7 +817,7 @@ end
 - \#elixirlang
 
 - Slides at https://eoinsha.github.io/elixir-intro-slides/slides.html
-
+- Code at https://github.com/eoinsha/gol_ex.git
 
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
